# insight-chat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.env  pyproject.toml
app/: main.py
app/api/database/: mongo_db.py  vector_db.py
app/api/database/execute/: docs_execute.py  message_execute.py  session_execute.py  user_execute.py
app/api/database/models/: auth.py  chat.py  document.py  health.py  message.py  session.py  token.py  user.py
app/api/errors/: error_message.py  http_error.py  validation_error.py
app/api/helpers/: ingest_helper.py
app/api/helpers/readers/: remote_reader.py  web_reader.py
app/api/responses/: base.py
app/api/routes/: api_router.py  auth_router.py  chat_router.py  health_router.py  ingest_router.py  message_router.py  session_router.py  user_router.py
app/api/services/: auth_service.py  chat_service.py  ingest_service.py  message_service.py  session_service.py  user_service.py
app/core/: config.py  setting_rag.py
app/logger/: logger.py
